--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
-    "bcrypt": "^5.0.1",
+    "@vendia/serverless-express": "^4.5.3",
+    "aws-lambda": "^1.0.7",
+    "bcryptjs": "^2.4",
     "mongoose": "^6.1.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -36,7 +39,8 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@types/bcrypt": "^5.0.0",
+    "@types/aws-lambda": "^8.10.92",
+    "@types/bcryptjs": "^2.4.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
@@ -49,6 +53,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "serverless-offline": "^8.4.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
